# hipotecas

./: Cargo.toml  Hipotecas.xlsm  README  build.rs
assets/: Libro11.xlsx  Libro12.xlsx
src/: main.rs
src/libs/: cuota.rs  euribor_data.rs  hipoteca.rs  lib.rs  mod.rs  novacion.rs  tabla_amort.rs
