[package]
name = "hipotecas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.1.1"
chrono = "0.4"
colored = "2"
umya-spreadsheet = "0.7.2"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
